--- a/src/main/resources/theme/news.fxml
+++ b/src/main/resources/theme/news.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -22,6 +23,9 @@
         <WebView fx:id="newsDetailWebView" prefHeight="-1.0" prefWidth="-1.0"
                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                  AnchorPane.topAnchor="0.0"/>
+          <Button text="%news.showLadderMaps" fx:id="showLadderMapsButton" onAction="#showLadderMaps"
+                  AnchorPane.rightAnchor="0.0"
+                  AnchorPane.topAnchor="0.0"/>
       </children>
     </AnchorPane>
   </children>
