--- a/src/main/resources/theme/vault/review/reviews.fxml
+++ b/src/main/resources/theme/vault/review/reviews.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="reviewsRoot" hgap="20.0" maxHeight="1.7976931348623157E308"
-          maxWidth="1.7976931348623157E308" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.111"
+          maxWidth="1.7976931348623157E308" minWidth="0.0" vgap="20.0" xmlns="http://javafx.com/javafx/8.0.111"
           fx:controller="com.faforever.client.vault.review.ReviewsController">
     <columnConstraints>
         <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
@@ -34,7 +34,7 @@
         </AnchorPane>
         <Button fx:id="createReviewButton" graphicTextGap="10.0" mnemonicParsing="false"
                 onAction="#onCreateReviewButtonClicked" text="%reviews.create" GridPane.columnIndex="1"
-                GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" prefWidth="-Infinity">
+                GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
             <graphic>
                 <Label styleClass="icon" text=""/>
             </graphic>
@@ -150,12 +150,12 @@
         <HBox fx:id="reviewsPagination" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
               GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
             <children>
-                <Button fx:id="pageLeftButton" onAction="#onPageLeftButtonClicked" maxHeight="1.7976931348623157E308"
-                        mnemonicParsing="false" styleClass="icon-button" text="" HBox.hgrow="NEVER"/>
+                <Button fx:id="pageLeftButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                        onAction="#onPageLeftButtonClicked" styleClass="icon-button" text="" HBox.hgrow="NEVER"/>
                 <VBox fx:id="otherReviewsContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
                       HBox.hgrow="ALWAYS"/>
-                <Button fx:id="pageRightButton" onAction="#onPageRightButtonClicked" maxHeight="1.7976931348623157E308"
-                        mnemonicParsing="false" styleClass="icon-button" text="" HBox.hgrow="NEVER"/>
+                <Button fx:id="pageRightButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                        onAction="#onPageRightButtonClicked" styleClass="icon-button" text="" HBox.hgrow="NEVER"/>
             </children>
         </HBox>
     </children>
