Integrate Rackover's unit db
Store cookies via a custom CookieStore, that stores cookies in the preferences.
Fixes #728

--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -35,6 +35,8 @@
                                         <Label styleClass="h3" text="%settings.general.theme" />
                                         <ComboBox fx:id="themeComboBox" disable="true" />
                                         <CheckBox fx:id="rememberLastTabCheckBox" mnemonicParsing="false" text="%settings.general.rememberLastTab" />
+                                        <Label styleClass="h3" text="%settings.general.unitDatabase"/>
+                                        <ComboBox fx:id="unitDatabaseComboBox"/>
                                     </children>
                                 </VBox>
                             </children>
