--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -78,6 +78,9 @@
                                         </VBox>
                                         <Label styleClass="h3" text="%settings.chat.foes" />
                                         <CheckBox fx:id="hideFoeCheckBox" mnemonicParsing="false" text="%settings.chat.hideFoe" />
+                                        <Label styleClass="h3" text="%settings.chat.notifications"/>
+                                        <CheckBox fx:id="notifyOnAtMentionOnly" mnemonicParsing="false"
+                                                  text="%settings.chat.notifyOnAtMentionOnly"/>
                                         <Label text="%settings.chat.timeFormat"/>
                                         <ComboBox fx:id="timeComboBox" onAction="#onTimeFormatSelected"/>
                                     </children>
