--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -7,8 +7,11 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import java.lang.String?>
@@ -17,7 +20,7 @@
   <children>
       <VBox alignment="CENTER" prefWidth="400.0" styleClass="login">
       <children>
-          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="">
+          <Text onMouseClicked="#onMouseClicked" strokeType="OUTSIDE" strokeWidth="0.0" text="">
               <VBox.margin>
                   <Insets bottom="50.0" top="70.0"/>
               </VBox.margin>
@@ -57,6 +60,31 @@
                   </Label>
                   <TextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
                   <PasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
+                  <GridPane vgap="5.0" fx:id="serverConfigPane">
+                      <columnConstraints>
+                          <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                      </columnConstraints>
+                      <rowConstraints>
+                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                      </rowConstraints>
+                      <children>
+                          <TextField fx:id="serverHostField" promptText="%login.serverHost"/>
+                          <TextField fx:id="serverPortField" prefColumnCount="6" promptText="%port"
+                                     GridPane.columnIndex="1"/>
+                          <TextField fx:id="replayServerHostField" layoutX="10.0" layoutY="7.0"
+                                     promptText="%login.replayServerHost" GridPane.rowIndex="1"/>
+                          <TextField fx:id="replayServerPortField" layoutX="310.0" layoutY="7.0" prefColumnCount="6"
+                                     promptText="%port" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                          <TextField fx:id="apiBaseUrl" prefColumnCount="6" promptText="%login.apiBaseUrl"
+                                     GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
+                      </children>
+                      <VBox.margin>
+                          <Insets top="20.0"/>
+                      </VBox.margin>
+                  </GridPane>
                   <CheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
                             mnemonicParsing="false" text="%login.autoLogin">
                       <VBox.margin>
@@ -64,14 +92,13 @@
                       </VBox.margin>
                   </CheckBox>
                   <Button fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
-                          mnemonicParsing="false" onAction="#loginButtonClicked" text="%login.button.login"/>
+                          mnemonicParsing="false" onAction="#onLoginButtonClicked" text="%login.button.login"/>
                   <HBox alignment="CENTER" spacing="10.0">
                       <children>
-                          <Button alignment="CENTER" maxWidth="1.7976931348623157E308" onAction="#forgotLoginClicked"
-                                  mnemonicParsing="false" text="%login.forgot" HBox.hgrow="ALWAYS"/>
-                          <Button alignment="CENTER" maxWidth="1.7976931348623157E308"
-                                  onAction="#createNewAccountClicked"
-                                  mnemonicParsing="false" text="%login.create" HBox.hgrow="ALWAYS"/>
+                          <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                  onAction="#forgotLoginClicked" text="%login.forgot" HBox.hgrow="ALWAYS"/>
+                          <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                  onAction="#createNewAccountClicked" text="%login.create" HBox.hgrow="ALWAYS"/>
                       </children>
                       <VBox.margin>
                           <Insets top="20.0"/>
