finishes #159 follow player

--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -64,6 +64,10 @@
                                       styleClass="main-navigation-button" text="%main.units"
                                       toggleGroup="$mainNavigation"/>
                         <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS"/>
+                        <Button fx:id="followingButton" contentDisplay="CENTER" focusTraversable="false"
+                                mnemonicParsing="false"
+                                onAction="#onStopFollowButtonClicked"
+                                text="Following: Downlord"/>
                         <StackPane>
                             <children>
                                 <Button contentDisplay="CENTER" focusTraversable="false" mnemonicParsing="false"
