--- a/src/main/resources/theme/chat/chat_user_context_menu.fxml
+++ b/src/main/resources/theme/chat/chat_user_context_menu.fxml
@@ -27,7 +27,9 @@
     <MenuItem fx:id="addFoeItem" mnemonicParsing="false" onAction="#onAddFoe" text="%chat.userContext.addFoe" />
     <MenuItem fx:id="removeFoeItem" mnemonicParsing="false" onAction="#onRemoveFoe" text="%chat.userContext.removeFoe" />
     <SeparatorMenuItem mnemonicParsing="false" />
-      <MenuItem fx:id="joinGameItem" mnemonicParsing="false" onAction="#onJoinGame" text="%chat.userContext.joinGame" />
+      <MenuItem fx:id="followPlayerItem" mnemonicParsing="false" onAction="#onFollowPlayer"
+                text="%chat.userContext.followPlayer"/>
+      <MenuItem fx:id="joinGameItem" mnemonicParsing="false" onAction="#onJoinGame" text="%chat.userContext.joinGame"/>
     <MenuItem fx:id="watchGameItem" mnemonicParsing="false" onAction="#onWatchGame" text="%chat.userContext.viewLiveReplay" />
     <MenuItem fx:id="viewReplaysItem" disable="true" mnemonicParsing="false" onAction="#onViewReplays"
               text="%chat.userContext.viewReplays"/>
