--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,10 +15,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import java.lang.String?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" onMouseClicked="#onDimmerClicked"
-            styleClass="dimmer" xmlns="http://javafx.com/javafx/8.0.60"
-            fx:controller="com.faforever.client.game.CreateGameController">
+
+<AnchorPane fx:id="createGameRoot" onMouseClicked="#onDimmerClicked" styleClass="dimmer" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.CreateGameController">
    <children>
       <AnchorPane layoutX="50.0" layoutY="50.0" onMouseClicked="#onContentPaneClicked" styleClass="modal-popup" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -64,7 +63,7 @@
                   </padding>
                 </HBox>
                 <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="%game.create.rating" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Pane fx:id="mapPreviewPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="map-preview" GridPane.columnIndex="3" GridPane.rowIndex="3" GridPane.rowSpan="3" />
+                  <Pane fx:id="mapPreviewPane" styleClass="map-preview" GridPane.columnIndex="3" GridPane.rowIndex="3" GridPane.rowSpan="3" />
                   <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS">
                      <columnConstraints>
                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
