--- a/src/main/resources/theme/vault/search/specification.fxml
+++ b/src/main/resources/theme/vault/search/specification.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXComboBox?>
-<?import javafx.scene.control.DatePicker?>
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import javafx.scene.layout.HBox?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="specificationRoot" maxHeight="-Infinity" maxWidth="-Infinity"
       minHeight="-Infinity" minWidth="-Infinity" spacing="10" xmlns="http://javafx.com/javafx/8.0.111"
@@ -10,5 +10,5 @@
     <JFXComboBox fx:id="operationField" maxHeight="1.7976931348623157E308" prefWidth="150.0"/>
     <JFXComboBox fx:id="valueField" editable="true" maxHeight="1.7976931348623157E308" prefWidth="300.0"
                  promptText="%query.valueHint"/>
-    <DatePicker fx:id="datePicker" maxHeight="1.7976931348623157E308" prefWidth="300.0"/>
+    <JFXDatePicker fx:id="datePicker" maxHeight="1.7976931348623157E308" prefWidth="300.0"/>
 </HBox>
