--- a/src/main/resources/theme/player_card_tooltip.fxml
+++ b/src/main/resources/theme/player_card_tooltip.fxml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<Label xmlns:fx="http://javafx.com/fxml/1" fx:id="playerInfo" text="&lt;PlayerInfo&gt;"
-       xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.PlayerCardTooltipController"
-       styleClass="player-card-tooltip">
-  <graphic>
-      <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true"/>
-  </graphic>
-</Label>
+<?import javafx.scene.layout.HBox?>
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" xmlns="http://javafx.com/javafx/8.0.141"
+      fx:controller="com.faforever.client.game.PlayerCardTooltipController">
+    <Label fx:id="playerInfo" styleClass="player-card-tooltip" text="&lt;PlayerInfo&gt;">
+        <graphic>
+            <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true"/>
+        </graphic>
+    </Label>
+    <Label fx:id="foeIconText" minWidth="-Infinity">
+        <graphic>
+            <Label text="" styleClass="icon"/>
+        </graphic>
+        <HBox.margin>
+            <Insets left="5.0"/>
+        </HBox.margin>
+    </Label>
+    <Label fx:id="friendIconText" minWidth="-Infinity">
+        <graphic>
+            <Label text="" styleClass="icon"/>
+        </graphic>
+        <HBox.margin>
+            <Insets left="5.0"/>
+        </HBox.margin>
+    </Label>
+</HBox>
